--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,7 @@
 **/.dockerignore
 **/.env
 **/.git
+**/.github
 **/.gitignore
 **/.project
 **/.settings
@@ -20,5 +21,8 @@
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
+**/.pi
 LICENSE
 README.md
+*.md
+*.log
