--- a/package.json
+++ b/package.json
@@ -15,28 +15,27 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
-    "@kollavarsham/gulp-coveralls": "^0.3.4",
+    "@kollavarsham/gulp-coveralls": "^0.6.0",
     "babel-eslint": "^10.1.0",
     "braces": "^3.0.2",
-    "eslint": "^7.30.0",
+    "eslint": "^8.33.0",
     "gulp": "^4.0.2",
     "gulp-eslint": "^6.0.0",
     "gulp-line-ending-corrector": "^1.0.3",
-    "gulp-uglify-es": "^2.0.0",
-    "rita-gulp-watch": "^5.1.4"
+    "gulp-uglify-es": "^3.0.0"
   },
   "dependencies": {
     "@top-gg/sdk": "^3.1.3",
     "common-tags": "^1.8.0",
-    "discord.js": "^12.5.3",
-    "dotenv": "^10.0.0",
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3",
     "rita-google-translate-api": "github:DevilHimSelf666/google-translate-api",
     "iconv-lite": "^0.6.3",
     "iso-639-1": "^2.1.9",
     "lodash": "^4.17.21",
     "make-dir": "^3.1.0",
     "path": "^0.12.7",
-    "pg": "^8.7.1",
+    "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "rita-seconds-converter": "^1.3.0",
     "sequelize": "^6.6.5",
