--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/eslint-parser": "^7.14.7",
+    "@babel/core": "^7.23.7",
+    "@babel/eslint-parser": "^7.23.3",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.23.8",
     "@kollavarsham/gulp-coveralls": "^0.6.0",
-    "babel-eslint": "^10.1.0",
     "braces": "^3.0.2",
     "eslint": "^8.33.0",
     "gulp": "^4.0.2",
@@ -29,7 +31,6 @@
     "common-tags": "^1.8.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "rita-google-translate-api": "github:DevilHimSelf666/google-translate-api",
     "iconv-lite": "^0.6.3",
     "iso-639-1": "^2.1.9",
     "lodash": "^4.17.21",
@@ -37,6 +38,7 @@
     "path": "^0.12.7",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
+    "rita-google-translate-api": "github:DevilHimSelf666/google-translate-api",
     "rita-seconds-converter": "^1.3.0",
     "sequelize": "^6.6.5",
     "sqlite3": "^5.0.2",
