--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,10 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}/src/bot.js"
+      "program": "${workspaceFolder}/src/bot.js",
+      "skipFiles": [
+        "${workspaceFolder}/node_modules/**/*.js"
+      ]
     },
     {
       "name": "Docker Node.js Launch",
